minor fixes, change netty versioning