@@ -26,31 +26,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>download-files</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <tasks>
-                                <get src="https://storage.googleapis.com/simba-bq-release/jdbc/SimbaJDBCDriverforGoogleBigQuery42_1.2.21.1025.zip"
-                                     dest="${project.build.directory}/bigquery-simba-driver.zip"
-                                     verbose="false"
-                                     usetimestamp="true"
-                                />
-                                <unzip src="${project.build.directory}/bigquery-simba-driver.zip"
-                                       dest="${project.build.directory}/classes/"
-                                />
-                            </tasks>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <!-- Block running the _server tests (They should only execute in TeamCity). Run only H2 tests-->
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -67,10 +42,6 @@
                     <excludes>
                         <exclude>**/ExternalIntegration*.java</exclude>
                     </excludes>
-                    <additionalClasspathElements>
-                        <additionalClasspathElement>${project.build.directory}/classes/*</additionalClasspathElement>
-                    </additionalClasspathElements>
-                    <argLine>${argLine} -Xmx2g -Xms1g -XX:MaxPermSize=1024m -XX:SoftRefLRUPolicyMSPerMB=1</argLine>
                 </configuration>
             </plugin>
             <!-- Block running the _server tests (They should only execute in TeamCity). Run only H2 tests-->
@@ -211,6 +182,9 @@
                         </dependencies>
                         <!-- Without override, surefire configuration would have skipped our integration tests -->
                         <configuration combine.self="override">
+                            <includes>
+                                <include>**/ExternalIntegration*.java</include>
+                            </includes>
                             <useSystemClassLoader>false</useSystemClassLoader>
                             <argLine>${argLine} -Xmx2g -Xms1g -XX:MaxPermSize=1024m -XX:SoftRefLRUPolicyMSPerMB=1</argLine>
                             <additionalClasspathElements>
@@ -226,6 +200,8 @@
                             </additionalClasspathElements>
                             <environmentVariables>
                                 <GOOGLE_APPLICATION_CREDENTIALS>${env.GOOGLE_APPLICATION_CREDENTIALS}</GOOGLE_APPLICATION_CREDENTIALS>
+                                <AWS_ACCESS_KEY_ID>${env.AWS_ACCESS_KEY_ID}</AWS_ACCESS_KEY_ID>
+                                <AWS_SECRET_ACCESS_KEY>${env.AWS_SECRET_ACCESS_KEY}</AWS_SECRET_ACCESS_KEY>
                             </environmentVariables>
 
                         </configuration>
